--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "6.12.0",
-    "ajv": "6",
     "axios": "0.21.4",
     "body-parser": "1.19.0",
     "boom": "7.3.0",
@@ -32,6 +31,8 @@
     "form-data": "4.0.0",
     "got": "11.8.2",
     "jsdom": "17.0.0",
+    "json-schema-default-instance": "1.3.0",
+    "json-schema-defaults": "0.4.0",
     "lodash": "4.17.21",
     "merge-stream": "2.0.0",
     "moment": "2.29.1",
