--- a/server/package.json
+++ b/server/package.json
@@ -32,20 +32,17 @@
     "express": "4.17.1",
     "faker": "5.5.3",
     "fast-luhn": "2.0.0",
-    "form-data": "4.0.0",
-    "got": "11.8.2",
     "iconv-lite": "0.6.3",
     "jsdom": "17.0.0",
     "lodash": "4.17.21",
     "luxon": "2.0.2",
     "merge-stream": "2.0.0",
     "moment": "2.29.1",
-    "mongodb": "4.1.1",
+    "mongodb": "4.1.2",
     "mongodb-memory-server": "7.4.0",
     "oleoduc": "0.5.10",
     "query-string": "7.0.1",
-    "rate-limiter-flexible": "2.2.4",
-    "title-case": "3.0.3"
+    "rate-limiter-flexible": "2.2.4"
   },
   "devDependencies": {
     "axios-mock-adapter": "1.20.0",
@@ -57,7 +54,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "mocha": "9.1.1",
     "nodemon": "2.0.12",
-    "prettier": "2.4.0"
+    "prettier": "2.4.1"
   },
   "prettier": {
     "printWidth": 120,
