--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "express": "4.17.1",
     "faker": "5.5.3",
     "fast-luhn": "2.0.0",
+    "got": "11.8.2",
     "iconv-lite": "0.6.3",
     "jsdom": "17.0.0",
     "lodash": "4.17.21",
@@ -53,6 +54,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "mocha": "9.1.1",
+    "nock": "13.1.3",
     "nodemon": "2.0.12",
     "prettier": "2.4.1"
   },
