--- a/ui/package.json
+++ b/ui/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@sentry/browser": "6.3.5",
-    "@testing-library/jest-dom": "5.11.10",
-    "@testing-library/react": "11.2.6",
-    "@testing-library/user-event": "13.1.2",
-    "formik": "2.2.6",
+    "@nivo/core": "0.73.0",
+    "@nivo/network": "0.73.0",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.1.0",
+    "@testing-library/user-event": "13.2.1",
+    "formik": "2.2.9",
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.21",
-    "luxon": "1.26.0",
-    "query-string": "7.0.0",
+    "moment": "2.29.1",
+    "query-string": "7.0.1",
     "react": "17.0.2",
-    "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.2",
-    "react-hooks-global-state": "1.0.1",
-    "react-router-dom": "5.2.0",
+    "react-hooks-global-state": "1.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "styled-components": "5.2.3",
+    "styled-components": "5.3.1",
     "tabler-react": "1.30.1",
     "yup": "0.32.9"
   },
@@ -43,9 +43,14 @@
       "last 1 safari version"
     ]
   },
+  "prettier": {
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "trailingComma": "es5"
+  },
   "devDependencies": {
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "prettier": "2.3.1"
+    "eslint-plugin-prettier": "4.0.0",
+    "prettier": "2.4.1"
   }
 }
