--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "mocha": "9.1.1",
+    "ms": "3.0.0-canary.1",
     "nock": "13.1.3",
     "nodemon": "2.0.12",
     "prettier": "2.4.1"
