--- a/reverse_proxy/app/nginx/nginx.conf
+++ b/reverse_proxy/app/nginx/nginx.conf
@@ -39,5 +39,5 @@ http {
         '' close;
     }
 
-    include /etc/nginx/conf.d/annuaire.conf;
+    include /etc/nginx/conf.d/referentiel.conf;
 }
