--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -9,12 +9,12 @@ RUN yarn install --frozen-lockfile && \
 
 # Build site
 COPY . ./
-ARG ANNUAIRE_SENTRY_DSN
-ARG ANNUAIRE_ENV
-ARG ANNUAIRE_NO_BUILD
-ENV REACT_APP_ANNUAIRE_ENV=$ANNUAIRE_ENV
-ENV REACT_APP_ANNUAIRE_SENTRY_DSN=$ANNUAIRE_SENTRY_DSN
-RUN if [ -z "$ANNUAIRE_NO_BUILD" ] ; then \
+ARG REFERENTIEL_SENTRY_DSN
+ARG REFERENTIEL_ENV
+ARG REFERENTIEL_NO_BUILD
+ENV REACT_APP_REFERENTIEL_ENV=$REFERENTIEL_ENV
+ENV REACT_APP_REFERENTIEL_SENTRY_DSN=$REFERENTIEL_SENTRY_DSN
+RUN if [ -z "$REFERENTIEL_NO_BUILD" ] ; then \
       INLINE_RUNTIME_CHUNK=false yarn build && mv /app/build /site ; \
     else \
       echo "No Build" ; \
