--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,3 +9,5 @@ jobs:
         with:
           node-version: '16'
       - run: make ci
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
