--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [push, pull_request]
+on: [ push ]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -8,6 +8,13 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+
       - run: make ci
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./server/.coverage
+          name: codecov-server
+          verbose: true
