--- a/server/package.json
+++ b/server/package.json
@@ -36,10 +36,11 @@
     "jsdom": "17.0.0",
     "lodash": "4.17.21",
     "luxon": "2.0.2",
+    "miniget": "4.2.1",
     "moment": "2.29.1",
     "mongodb": "4.1.2",
     "mongodb-memory-server": "7.4.1",
-    "oleoduc": "0.5.11",
+    "oleoduc": "0.6.0",
     "pretty-ms": "7.0.1",
     "query-string": "7.0.1",
     "rate-limiter-flexible": "2.2.4"
