--- a/server/package.json
+++ b/server/package.json
@@ -43,7 +43,8 @@
     "oleoduc": "0.6.0",
     "pretty-ms": "7.0.1",
     "query-string": "7.0.1",
-    "rate-limiter-flexible": "2.2.4"
+    "rate-limiter-flexible": "2.2.4",
+    "serialize-error": "8.1.0"
   },
   "devDependencies": {
     "axios-mock-adapter": "1.20.0",
