--- a/ui/package.json
+++ b/ui/package.json
@@ -3,24 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@nivo/core": "0.73.0",
-    "@nivo/network": "0.73.0",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.1.0",
-    "@testing-library/user-event": "13.2.1",
+    "@gouvfr/dsfr": "1.2.1",
+    "@nivo/core": "0.74.0",
+    "@nivo/network": "0.74.0",
+    "@testing-library/jest-dom": "5.15.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "classnames": "2.3.1",
     "formik": "2.2.9",
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.21",
     "moment": "2.29.1",
+    "node-sass": "6.0.1",
+    "prop-types": "15.7.2",
     "query-string": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hooks-global-state": "1.0.2",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
-    "styled-components": "5.3.1",
+    "styled-components": "5.3.3",
     "tabler-react": "1.30.1",
-    "yup": "0.32.9"
+    "use-react-router-breadcrumbs": "3.0.1",
+    "uuid": "8.3.2",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +57,6 @@
   "devDependencies": {
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
-    "prettier": "2.4.1"
+    "prettier": "2.5.0"
   }
 }
