--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,6 @@
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.21",
     "moment": "2.29.1",
-    "node-sass": "6.0.1",
     "prop-types": "15.7.2",
     "query-string": "7.0.1",
     "react": "17.0.2",
@@ -23,7 +22,6 @@
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "5.3.3",
-    "tabler-react": "1.30.1",
     "use-react-router-breadcrumbs": "3.0.1",
     "uuid": "8.3.2",
     "yup": "0.32.11"
@@ -57,6 +55,7 @@
   "devDependencies": {
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
-    "prettier": "2.5.0"
+    "prettier": "2.5.0",
+    "node-sass": "6.0.1"
   }
 }
