--- a/ui/package.json
+++ b/ui/package.json
@@ -55,7 +55,7 @@
   "devDependencies": {
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
-    "prettier": "2.5.0",
-    "node-sass": "6.0.1"
+    "node-sass": "6.0.1",
+    "prettier": "2.5.0"
   }
 }
