--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "fast-luhn": "2.0.0",
     "iconv-lite": "0.6.3",
     "jsdom": "17.0.0",
+    "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "luxon": "2.2.0",
     "miniget": "4.2.1",
@@ -41,11 +42,15 @@
     "mongodb": "4.2.1",
     "mongodb-memory-server": "8.0.4",
     "oleoduc": "0.6.0",
+    "passport": "0.5.0",
+    "passport-anonymous": "1.0.1",
+    "passport-jwt": "4.0.0",
     "pretty-ms": "7.0.1",
     "query-string": "7.0.1",
     "rate-limiter-flexible": "2.3.6",
     "serialize-error": "8.1.0",
     "swagger-ui-express": "4.2.0",
+    "uuid": "8.3.2",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
