--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "5.3.3",
+    "use-react-router-breadcrumbs": "3.0.1",
     "uuid": "8.3.2",
     "yup": "0.32.11"
   },
