--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "classnames": "2.3.1",
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.21",
+    "node-sass": "6.0.1",
     "prop-types": "15.7.2",
     "query-string": "7.0.1",
     "react": "17.0.2",
