Remove and REFERENTIEL_NO_BUILD and FAST_REFRESH

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -7,17 +7,20 @@ COPY package.json yarn.lock /app/
 RUN yarn install --frozen-lockfile && \
     yarn global add local-web-server
 
-# Build site
-COPY . ./
+# Map arguments to react-scripts env variables
 ARG REFERENTIEL_SENTRY_DSN
 ARG REFERENTIEL_ENV
-ARG REFERENTIEL_NO_BUILD
 ENV REACT_APP_REFERENTIEL_ENV=$REFERENTIEL_ENV
 ENV REACT_APP_REFERENTIEL_SENTRY_DSN=$REFERENTIEL_SENTRY_DSN
-RUN if [ -z "$REFERENTIEL_NO_BUILD" ] ; then \
-      INLINE_RUNTIME_CHUNK=false yarn build && mv /app/build /site ; \
+
+# Build site
+SHELL ["bash", "-c"]
+COPY . ./
+RUN mkdir -p /site
+RUN if [[ "$REFERENTIEL_ENV" == "dev" ]] ; then \
+      echo "[WARNING] Site has not been built. You must start this container with command 'yarn start'" ; \
     else \
-      echo "No Build" ; \
+      INLINE_RUNTIME_CHUNK=false yarn build && mv /app/build /site ; \
     fi
 
 EXPOSE 3000
