--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,6 +14,8 @@ services:
         - REFERENTIEL_ENV=dev
     volumes:
       - ./ui:/app #Allows source folders to be watched
+    environment:
+      - FAST_REFRESH=false
 
   server:
     command: ["yarn", "debug"]
