Fix ui container killing issue

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16.13.1-stretch
 WORKDIR /app
 
 # Install dependencies
-COPY package.json yarn.lock /app/
+COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile && \
     yarn global add local-web-server
 
@@ -14,13 +14,14 @@ ENV REACT_APP_REFERENTIEL_ENV=$REFERENTIEL_ENV
 ENV REACT_APP_REFERENTIEL_SENTRY_DSN=$REFERENTIEL_SENTRY_DSN
 
 # Build site
-SHELL ["bash", "-c"]
 COPY . ./
-RUN if [[ "$REFERENTIEL_ENV" == "dev" ]] ; then \
+RUN if [ "$REFERENTIEL_ENV" == "dev" ] ; then \
       echo "[WARNING] Site has not been built. You must start this container with command 'yarn start'" ; \
     else \
       INLINE_RUNTIME_CHUNK=false yarn build && mv /app/build /site ; \
-    fi
+fi
+
 
 EXPOSE 3000
-CMD ws --port 3000 -d /site --log.format dev --spa index.html
+RUN chmod +x /app/start.sh
+CMD ["/app/start.sh"]
