--- a/ui/package.json
+++ b/ui/package.json
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "update-browserslist": "npx browserslist --update-db"
   },
   "eslintConfig": {
     "extends": "react-app"
