Prevent node_modules to be mounted on dev container

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,6 +11,7 @@ services:
     stdin_open: true
     volumes:
       - ./ui:/app #Allows source folders to be watched
+      - /app/node_modules/
     environment:
       - FAST_REFRESH=false
 
