--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
     "query-string": "7.1.0",
     "rate-limiter-flexible": "2.3.6",
     "serialize-error": "8.1.0",
+    "stream-json": "1.7.3",
     "swagger-ui-express": "4.3.0",
     "uuid": "8.3.2",
     "yamljs": "0.3.0"
