--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.21",
     "luxon": "2.3.0",
+    "mapbox-gl": "2.7.0",
     "node-sass": "6.0.1",
     "prop-types": "15.8.1",
     "query-string": "7.1.0",
