--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@gouvfr/dsfr": "1.3.1",
+    "@nivo/bar": "0.79.1",
+    "@nivo/core": "0.79.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
