--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,8 @@
     "@gouvfr/dsfr": "1.3.1",
     "@nivo/bar": "0.79.1",
     "@nivo/core": "0.79.0",
+    "@nivo/pie": "0.79.1",
+    "@nivo/tooltip": "0.79.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
