--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "debug": "nodemon --inspect=0.0.0.0 --signal SIGINT --ignore tests/ src/index.js",
-    "cli": "REFERENTIEL_LOG_DESTINATIONS=stderr node src/cli.js",
+    "cli": "node src/cli.js",
+    "pipe": "REFERENTIEL_LOG_DESTINATIONS=stderr yarn cli",
     "test": "REFERENTIEL_LOG_LEVEL=fatal mocha tests/",
     "coverage": "nyc --temp-dir .coverage/.nyc_output --report-dir .coverage --reporter=lcov --reporter=html yarn test",
     "lint": "eslint src/ tests/"
