--- a/reverse_proxy/app/nginx/nginx.conf
+++ b/reverse_proxy/app/nginx/nginx.conf
@@ -30,6 +30,7 @@ http {
     keepalive_timeout 65;
     gzip on;
 
+    # Maximum 2400r/m pour l'ensemble des utilisateurs avant dégradation du service
     limit_req_zone $binary_remote_addr zone=flood:10m rate=400r/m;
     limit_req_log_level error;
 
