--- a/reverse_proxy/app/nginx/templates/includes/location_ui.conf.template
+++ b/reverse_proxy/app/nginx/templates/includes/location_ui.conf.template
@@ -1,15 +1,12 @@
 location / {
+    set $upstream http://ui:3000;
+    include includes/proxy.conf;
 
-    limit_req zone=flood burst=100 nodelay;
+    client_max_body_size 0;
 
-    proxy_pass          http://ui:3000;
-    proxy_redirect      off;
-    proxy_cache         off;
-    proxy_set_header    Host $host;
-    proxy_set_header    X-Real-IP $remote_addr;
-    proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header    X-Forwarded-Host $server_name;
-    proxy_set_header    X-Forwarded-Proto $scheme;
+    if ($always_redirect = on) {
+        return 301 https://$host$request_uri;
+    }
 
     set $CSP "default-src 'self';";
     set $CSP "connect-src 'self' https://*.ingest.sentry.io;base-uri;";
