--- a/reverse_proxy/app/nginx/templates/conf.d/default.conf.template
+++ b/reverse_proxy/app/nginx/templates/conf.d/default.conf.template
@@ -12,8 +12,8 @@ server {
     server_name ${SERVER_NAME};
     set $always_redirect ${NGINX_ALWAYS_TLS_REDIRECT};
 
-    include includes/location_api.conf;
-    include includes/location_ui.conf;
+    include includes/location_*.conf;
+    include includes/env/location_*.conf;
 }
 
 server {
@@ -38,6 +38,6 @@ server {
 
     ssl_verify_client ${PROXY_SSL_VERIFY};
 
-    include includes/location_api.conf;
-    include includes/location_ui.conf;
+    include includes/location_*.conf;
+    include includes/env/location_*.conf;
 }
