--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,6 +5,8 @@ services:
     volumes:
       - .local/nginx:/data
       - ./reverse_proxy/dev/includes:/etc/nginx/templates/includes/env
+    environment:
+      - SERVERNAME=localhost
 
   ui:
     command: yarn start
