Conversion du reverse_proxy en WAF (#29)
* Conversion du reverse_proxy en WAF

* Ajout du support des websockets dans le WAF

* Ajout des methods http autorisées

* Nettoyage waf

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,9 @@ services:
   reverse_proxy:
     volumes:
       - .local/nginx:/data
+      - ./reverse_proxy/dev/includes:/etc/nginx/templates/includes/env
+    environment:
+      - SERVERNAME=localhost
 
   ui:
     command: yarn start
