--- a/server/package.json
+++ b/server/package.json
@@ -38,10 +38,10 @@
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "luxon": "2.3.1",
-    "miniget": "4.2.2",
     "moment": "2.29.2",
     "mongodb": "4.5.0",
     "mongodb-memory-server": "8.4.2",
+    "node-fetch": "2",
     "oleoduc": "0.6.0",
     "passport": "0.5.2",
     "passport-anonymous": "1.0.1",
