Use multi-stage dockerfile to split prod and dev ui images (#35)
* Use a custom Dockerfile for dev env

* Utilisation d'un dockerfile multi stage

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,10 +10,14 @@ services:
 
   ui:
     command: yarn start
+    build:
+      args:
+      - REFERENTIEL_ENV=dev
     mem_limit: 2g
     stdin_open: true
     volumes:
       - ./ui:/app #Allows source folders to be watched
+      - /app/node_modules/
     environment:
       - FAST_REFRESH=false
 
