--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,25 +1,22 @@
-FROM node:18-bullseye
+# Defining environment
+ARG REFERENTIEL_ENV=production
 
-WORKDIR /app
-
-# Install dependencies
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile && \
-    yarn global add local-web-server
-
-# Map arguments to react-scripts env variables
-ARG REFERENTIEL_SENTRY_DSN
-ARG REFERENTIEL_ENV
-ENV REACT_APP_REFERENTIEL_ENV=$REFERENTIEL_ENV
-ENV REACT_APP_REFERENTIEL_SENTRY_DSN=$REFERENTIEL_SENTRY_DSN
+FROM node:18-bullseye as base
 #https://github.com/webpack/webpack/issues/14532
 ENV NODE_OPTIONS=--openssl-legacy-provider
-
-# Build site
-COPY . ./
-RUN INLINE_RUNTIME_CHUNK=false yarn build && mv /app/build /site
-
-
 EXPOSE 3000
+WORKDIR /app
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
+COPY . ./
+
+FROM base as cra-production
+RUN yarn global add local-web-server
+RUN INLINE_RUNTIME_CHUNK=false yarn build && mv /app/build /site
 RUN chmod +x /app/start.sh
 CMD ["/app/start.sh"]
+
+FROM base as cra-dev
+CMD yarn start
+
+FROM cra-${REFERENTIEL_ENV} as final
