--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,6 @@
     "dotenv": "16.0.0",
     "env-var": "7.1.1",
     "express": "4.18.0",
-    "faker": "5.5.3",
     "fast-luhn": "2.0.0",
     "iconv-lite": "0.6.3",
     "jsdom": "19.0.0",
@@ -56,6 +55,7 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "6.3.1",
     "axios-mock-adapter": "1.20.0",
     "axiosist": "0.10.0",
     "eslint": "8.14.0",
