--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "chalk": "4.1.2",
     "commander": "9.2.0",
     "csv-parse": "5.0.4",
+    "deep-object-diff": "1.1.7",
     "dotenv": "16.0.0",
     "env-var": "7.1.1",
     "express": "4.18.0",
