--- a/server/package.json
+++ b/server/package.json
@@ -73,6 +73,7 @@
   "prettier": {
     "printWidth": 120,
     "bracketSpacing": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "quoteProps": "consistent"
   }
 }
