Several new parameters (env) to ease running the app outside Docker
- Portability on macOS
- Env vars for PORT and API URL (no Docker option)
- Remove unneeded config and update Readme for Ubuntu 22

--- a/server/package.json
+++ b/server/package.json
@@ -53,7 +53,8 @@
     "stream-json": "1.7.4",
     "swagger-ui-express": "4.3.0",
     "uuid": "8.3.2",
-    "yamljs": "0.3.0"
+    "yamljs": "0.3.0",
+    "cors": "2.8.5"
   },
   "devDependencies": {
     "@faker-js/faker": "6.3.1",
