--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "bunyan-slack": "0.0.10",
     "chalk": "4.1.2",
     "commander": "9.2.0",
+    "cors": "2.8.5",
     "csv-parse": "5.0.4",
     "deep-object-diff": "1.1.7",
     "dotenv": "16.0.0",
@@ -46,6 +47,7 @@
     "passport": "0.5.2",
     "passport-anonymous": "1.0.1",
     "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
     "pretty-ms": "7.0.1",
     "query-string": "7.1.1",
     "rate-limiter-flexible": "2.3.6",
@@ -53,8 +55,7 @@
     "stream-json": "1.7.4",
     "swagger-ui-express": "4.3.0",
     "uuid": "8.3.2",
-    "yamljs": "0.3.0",
-    "cors": "2.8.5"
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
     "@faker-js/faker": "6.3.1",
