--- a/server/package.json
+++ b/server/package.json
@@ -71,7 +71,8 @@
     "nock": "13.2.4",
     "nodemon": "2.0.15",
     "nyc": "15.1.0",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "sinon": "17.0.1"
   },
   "prettier": {
     "printWidth": 120,
