lint(server): add node/no-unpublished-require rule

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -14,7 +14,8 @@
     "quote-props": [
       "error",
       "consistent"
-    ]
+    ],
+    "node/no-unpublished-require": "off"
   },
   "env": {
     "node": true,
