--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "13.1.1",
     "@testing-library/user-event": "14.1.1",
     "classnames": "2.3.1",
+    "env-var": "7.1.1",
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.21",
     "luxon": "2.3.2",
@@ -26,8 +27,7 @@
     "styled-components": "5.3.5",
     "use-react-router-breadcrumbs": "3.2.1",
     "uuid": "8.3.2",
-    "yup": "0.32.11",
-    "env-var": "7.1.1"
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
