Correction pour Yarn v2

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,12 @@
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+/node_modules
+
 .local/
 .coverage/
 .env
