--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -1,9 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
