UI : désactivation de Prettier, trop strict

--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -1,8 +1,8 @@
 {
   "root": true,
   "extends": [
-    "react-app",
-    "plugin:prettier/recommended"
+    "react-app"
+    //"plugin:prettier/recommended"
   ],
   "globals": {
     "dsfr": true
