Script `update-browserslist` : mise à jour du script et du module `caniuse-lite`

--- a/ui/package.json
+++ b/ui/package.json
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "update-browserslist": "npx browserslist --update-db"
+    "update-browserslist": "npx update-browserslist-db@latest"
   },
   "eslintConfig": {
     "extends": "react-app"
