--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,11 @@
     "@nivo/core": "0.79.0",
     "@nivo/pie": "0.79.1",
     "@nivo/tooltip": "0.79.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.6.1",
+    "@types/react": "18.3.20",
     "classnames": "2.5.1",
     "env-var": "7.5.0",
     "jsonwebtoken": "9.0.2",
@@ -23,10 +25,13 @@
     "query-string": "7.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-is": "^19.1.0",
+    "react-router": "^7.4.1",
     "react-router-dom": "6.30.0",
     "react-scripts": "4.0.3",
     "sass": "1.86.0",
     "styled-components": "5.3.11",
+    "typescript": "4.9.5",
     "use-react-router-breadcrumbs": "3.2.1",
     "uuid": "8.3.2",
     "yup": "1.6.1"
